Implement rate limiting and security features in IAM service; add Redis configuration, update documentation, and resolve bean conflict